[gd_scene load_steps=13 format=4 uid="uid://3yy3x54wukbp"]

[ext_resource type="Script" uid="uid://dmwxmmcld3cfc" path="res://scripts/roomSwapper.gd" id="1_2j8ko"]
[ext_resource type="Texture2D" path="res://assets/tiles/floor.png" id="2_sv4f0"]
[ext_resource type="Texture2D" path="res://assets/tiles/wall.png" id="3_5whjn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffxv4"]
size = Vector2(30.75, 590)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85yof"]
size = Vector2(31, 577)

[sub_resource type="Animation" id="Animation_ur823"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-565, -234), Vector2(-565, -234), Vector2(-546, 813)]
}

[sub_resource type="Animation" id="Animation_e0elq"]
resource_name = "FadeToBlack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-556, -334)]
}

[sub_resource type="Animation" id="Animation_8pl6i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-546, 813)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4rbc"]
_data = {
&"FadeIn": SubResource("Animation_ur823"),
&"FadeToBlack": SubResource("Animation_e0elq"),
&"RESET": SubResource("Animation_8pl6i")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bntx6"]
texture = ExtResource("2_sv4f0")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_savaj"]
texture = ExtResource("3_5whjn")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_1ie4t"]
sources/0 = SubResource("TileSetAtlasSource_bntx6")
sources/1 = SubResource("TileSetAtlasSource_savaj")

[node name="parentroom" type="Node2D"]
process_mode = 3
script = ExtResource("1_2j8ko")

[node name="Props" type="Node" parent="."]

[node name="rightExitArea" type="Area2D" parent="."]
process_mode = 1

[node name="rightExitAreaCollider" type="CollisionShape2D" parent="rightExitArea"]
position = Vector2(384, -12)
shape = SubResource("RectangleShape2D_ffxv4")

[node name="leftExitArea" type="Area2D" parent="."]
process_mode = 1

[node name="leftExitAreaCollider" type="CollisionShape2D" parent="leftExitArea"]
position = Vector2(15.5, 0)
shape = SubResource("RectangleShape2D_85yof")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_w4rbc")
}

[node name="Black" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -565.0
offset_top = -234.0
offset_right = 759.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
color = Color(0, 0, 0, 1)

[node name="Layer0" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAAAP//AQAAAAAAAAABAP//AQAAAAAAAAACAP//AQAAAAAAAAADAP//AQAAAAAAAAAEAP//AQAAAAAAAAAFAP//AQAAAAAAAAAGAP//AQAAAAAAAAAHAP//AQAAAAAAAAAIAP//AQAAAAAAAAAJAP//AQAAAAAAAAAKAP//AQAAAAAAAAALAP//AQAAAAAAAAAMAP//AQAAAAAAAAANAP//AQAAAAAAAAAOAP//AQAAAAAAAAAPAP//AQAAAAAAAAAQAP//AQAAAAAAAAARAP//AQAAAAAAAAASAP//AQAAAAAAAAATAP//AQAAAAAAAAAUAP//AQAAAAAAAAAVAP//AQAAAAAAAAAWAP//AQAAAAAAAAAXAP//AQAAAAAAAAAXAP7/AQAAAAAAAAAXAP3/AQAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAABAP7/AQAAAAAAAAACAP7/AQAAAAAAAAADAP7/AQAAAAAAAAAEAP7/AQAAAAAAAAAFAP7/AQAAAAAAAAAGAP7/AQAAAAAAAAAHAP7/AQAAAAAAAAAIAP7/AQAAAAAAAAAJAP7/AQAAAAAAAAAKAP7/AQAAAAAAAAALAP7/AQAAAAAAAAAMAP7/AQAAAAAAAAANAP7/AQAAAAAAAAAOAP7/AQAAAAAAAAAPAP7/AQAAAAAAAAAQAP7/AQAAAAAAAAARAP7/AQAAAAAAAAASAP7/AQAAAAAAAAATAP7/AQAAAAAAAAAUAP7/AQAAAAAAAAAVAP7/AQAAAAAAAAAWAP7/AQAAAAAAAAAWAP3/AQAAAAAAAAABAP3/AQAAAAAAAAACAP3/AQAAAAAAAAADAP3/AQAAAAAAAAAEAP3/AQAAAAAAAAAFAP3/AQAAAAAAAAAGAP3/AQAAAAAAAAAHAP3/AQAAAAAAAAAIAP3/AQAAAAAAAAAJAP3/AQAAAAAAAAAKAP3/AQAAAAAAAAALAP3/AQAAAAAAAAAMAP3/AQAAAAAAAAANAP3/AQAAAAAAAAAOAP3/AQAAAAAAAAAPAP3/AQAAAAAAAAAQAP3/AQAAAAAAAAARAP3/AQAAAAAAAAASAP3/AQAAAAAAAAATAP3/AQAAAAAAAAAUAP3/AQAAAAAAAAAVAP3/AQAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAALAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAARAAEAAAAAAAAAAAATAAEAAAAAAAAAAAAUAAEAAAAAAAAAAAAVAAEAAAAAAAAAAAAWAAEAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAPz/AQAAAAAAAAAWAPz/AQAAAAAAAAAVAPz/AQAAAAAAAAAUAPz/AQAAAAAAAAATAPz/AQAAAAAAAAASAPz/AQAAAAAAAAARAPz/AQAAAAAAAAAQAPz/AQAAAAAAAAAPAPz/AQAAAAAAAAAOAPz/AQAAAAAAAAANAPz/AQAAAAAAAAAMAPz/AQAAAAAAAAALAPz/AQAAAAAAAAAKAPz/AQAAAAAAAAAJAPz/AQAAAAAAAAAIAPz/AQAAAAAAAAAHAPz/AQAAAAAAAAAGAPz/AQAAAAAAAAAFAPz/AQAAAAAAAAAEAPz/AQAAAAAAAAADAPz/AQAAAAAAAAACAPz/AQAAAAAAAAABAPz/AQAAAAAAAAAAAPz/AQAAAAAAAAASAAEAAAAAAAAAAAAQAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAP//AQAAAAAAAAAYAP7/AQAAAAAAAAAYAP3/AQAAAAAAAAAYAPz/AQAAAAAAAAAAAPv/AQAAAAAAAAABAPv/AQAAAAAAAAACAPv/AQAAAAAAAAADAPv/AQAAAAAAAAAEAPv/AQAAAAAAAAAFAPv/AQAAAAAAAAAGAPv/AQAAAAAAAAAHAPv/AQAAAAAAAAAIAPv/AQAAAAAAAAAJAPv/AQAAAAAAAAAKAPv/AQAAAAAAAAALAPv/AQAAAAAAAAAMAPv/AQAAAAAAAAANAPv/AQAAAAAAAAAOAPv/AQAAAAAAAAAPAPv/AQAAAAAAAAAVAPv/AQAAAAAAAAAWAPv/AQAAAAAAAAAXAPv/AQAAAAAAAAAYAPv/AQAAAAAAAAAUAPv/AQAAAAAAAAATAPv/AQAAAAAAAAASAPv/AQAAAAAAAAARAPv/AQAAAAAAAAAQAPv/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_1ie4t")

[connection signal="area_entered" from="rightExitArea" to="." method="_on_right_exit_area_area_entered"]
[connection signal="area_entered" from="leftExitArea" to="." method="_on_left_exit_area_area_entered"]
